--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
   <body class="h-100">
     <div id="app" class="h-100"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
