--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
 
     <title>Guess the word</title>
-    <script type="module" crossorigin src="./assets/index.e2feda5f.js"></script>
-    <link rel="modulepreload" href="./assets/vendor.dbcb593d.js">
-    <link rel="stylesheet" href="./assets/index.def6bec5.css">
+    <script type="module" crossorigin src="./index.e2feda5f.js"></script>
+    <link rel="modulepreload" href="./vendor.dbcb593d.js">
+    <link rel="stylesheet" href="./index.def6bec5.css">
   </head>
 
   <body class="h-100">
